tests/baselines/reference/parser_breakInIterationOrSwitchStatement4.errors.txt
parser_breakInIterationOrSwitchStatement4.ts(1,15): error TS2304: Cannot find name 'something'.


==== parser_breakInIterationOrSwitchStatement4.ts (1 errors) ====
    for (var i in something) {
                  ~~~~~~~~~
!!! error TS2304: Cannot find name 'something'.
      break;
    }